# Comp3750Project

./: .project  .pydevproject  GITCOMMANDS  README
ColorCorrelogram/: Makefile  opencvbuildcommands
ColorCorrelogram/ProjectFiles/YoutubeTracking/: YoutubeTracking.layout
ColorCorrelogram/src/: ColorCorrelogram.c~  ColorCorrelogram.h  CorrelogramType.c  CorrelogramType.h  IOHelper.c  IOHelper.h  main.c
ColorCorrelogram/test/: CTestTestfile.cmake  ColorCorrelogramTest.c  Makefile  cmake_install.cmake
Comparer/src/: MultiComparer.py  R  batchComparer.py  comparer.py  comparer1.py  out.txt  out1.txt  out2.txt  outr1.txt  outr2.txt  r1Result.txt  r1Result2.txt
FeatureMatcher/src/: CMakeCache.txt  CMakeLists.txt  DisjointSetWrapper.cxx  DisjointSetWrapper.hxx  FeatureMatcher.cxx  FeatureVector.cxx  FeatureVector.hxx  Makefile  cmake_install.cmake
c/: #CMakeLists.txt#  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake
c/ProjectFiles/YoutubeTracking/: YoutubeTracking.cbp
c/Testing/Temporary/: CTestCostData.txt
c/src/: #ColorCorrelogram.c#  #OpenCVHelper.c#  .#ColorCorrelogram.c  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  ColorCorrelogram.c  ColorCorrelogram.h  CorrelogramType.c  CorrelogramType.h  IOHelper.c  IOHelper.h  Makefile  OpenCVHelper.c  OpenCVHelper.c~  OpenCVHelper.h  OpenCVHelper.h~  cmake_install.cmake  main  main.c  out  out.t  out.txt
c/test/: CMakeLists.txt  CTestTestfile.cmake  ColorCorrelogramTest  ColorCorrelogramTest.c  Makefile  OpenCVHelperTest  OpenCVHelperTest.c  OpenCVHelperTest.c~  cmake_install.cmake
documentation/: Install Guide.txt  UserGuide.txt
playground/: README
playground/opencvtests/: compile  loadimage  loadimage.c
python/colorCorrelogram/: ColorCorrelogram.py  ColorCorrelogramTest.py  Histogram.py  correlogram
src/TestFiles/: .jackiechansmall.jpeg.autosave  black.jpg~
src/colorCorrelogram/: ColorCorrelogram.py  ColorCorrelogramTest.py  Histogram.py  MainTest.py  profile_dump
